--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
         <main class="main">
       <section class="friends">
         <h2 class="friends__title">Conheça um pouco mais sobre a localização dos seus amigos</h2>
-      <p class="friends__text_first">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.x</p>
+      
+      <div class="friends__container">
+        <p class="friends__text_first">Cada pessoa é um artista livre, chamado a transformar as condições, pensamentos e estruturas que moldam nossas vidas.x</p>
         <p class="friends__text_second"> — Joseph Beuys</p>    
+      </div>
+        
        <p class="friends__text_third">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
 
           </section>
