--- a/index.html
+++ b/index.html
@@ -29,7 +29,35 @@
        <p class="friends__text_third">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
 
           </section>
-          <section class="gallery"></section>
+          
+<section class="gallery">
+  <img class="gallery__image"
+  src="./images/__item.png"
+  alt="Paisagens pelo mundo">
+  <img class="gallery__image"
+  src="./images/__item (1).png"
+  alt="Paisagens pelo mundo">
+  <img class="gallery__image"
+  src="./images/__item (2).png"
+  alt="Paisagens pelo mundo">
+  <img class="gallery__image"
+  src="./images/__item (3).png"
+  alt="Paisagens pelo mundo">
+  <img class="gallery__image"
+  src="./images/__item (4).png"
+  alt="Paisagens pelo mundo">
+  <img class="gallery__image"
+  src="./images/__item (5).png"
+  alt="Paisagens pelo mundo">
+  <img class="gallery__image"
+src="./images/__item (6).png"
+  alt="Paisagens pelo mundo">
+  <img class="gallery__image"
+  src="./images/__item (7).png"
+  alt="Paisagens pelo mundo">
+
+
+</section>
         <section class="cities"></section>
       
         </main>
