codigo footer feito

--- a/index.html
+++ b/index.html
@@ -290,7 +290,19 @@
         </section>
       </main>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__image">
+          <div class="footer__center">
+            <h2 class="footer__center_title">Visite-Nos</h2>
+            <p class="footer__center_paragraph">
+              Durante todo o ano Galeria de Arte TripleTen 404, Avenida Tim
+              Berners-Lee.
+            </p>
+            <button class="footer__center_button">Comprar bilhetes</button>
+          </div>
+        </div>
+        <p class="footer__copyrigth">© 2024. Guilherme Rigoto</p>
+      </footer>
     </div>
   </body>
 </html>
