--- a/index.html
+++ b/index.html
@@ -294,10 +294,11 @@
         <div class="footer__image">
           <div class="footer__center">
             <h2 class="footer__center_title">Visite-Nos</h2>
+            <p class="footer__center_paragraph">Durante todo o ano</p>
             <p class="footer__center_paragraph">
-              Durante todo o ano Galeria de Arte TripleTen 404, Avenida Tim
-              Berners-Lee.
+              Galeria de Arte TripleTen 404
             </p>
+            <p class="footer__center_paragraph">Avenida Tim Berners-Lee.</p>
             <button class="footer__center_button">Comprar bilhetes</button>
           </div>
         </div>
