--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
 
           <p class="friends__text_third">
-            A cidade de TripleTen reuniu profissionais de diversos cantos do
+            cidade de TripleTen reuniu profissionais de diversos cantos do
             mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar
             histórias e fotos de algumas das pessoas que dedicam seu tempo e
             esforço para fazer com que os futuros profissionais de tecnologia
