alt img png to jpg

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <div class="page">
       <header class="header">
-        <img class="logo" src="./images/logo.png" />
+        <img class="logo" src="./images/logo.jpg" />
         <h1 class="header__title">De Pátria para Pátria</h1>
         <p class="header__text">
           Uma jornada épica do Kentucky ao Burundi pelo País de Gales e Ucrânia
         </p>
         <img
           class="header__image"
-          src="./images/kalegin-michail-179870-unsplash.png"
+          src="./images/kalegin-michail-179870-unsplash.jpg"
           alt="Paisagem de praia com casas e o por do sol"
         />
       </header>
