todas img alt to jpg

--- a/index.html
+++ b/index.html
@@ -53,42 +53,42 @@
         <section class="gallery">
           <img
             class="gallery__image"
-            src="./images/__item.png"
+            src="./images/__item.jpg"
             alt="Paisagens pelo mundo"
           />
           <img
             class="gallery__image"
-            src="./images/__item (1).png"
+            src="./images/__item (1).jpg"
             alt="Paisagens pelo mundo"
           />
           <img
             class="gallery__image"
-            src="./images/__item (2).png"
+            src="./images/__item (2).jpg"
             alt="Paisagens pelo mundo"
           />
           <img
             class="gallery__image"
-            src="./images/__item (3).png"
+            src="./images/__item (3).jpg"
             alt="Paisagens pelo mundo"
           />
           <img
             class="gallery__image"
-            src="./images/__item (4).png"
+            src="./images/__item (4).jpg"
             alt="Paisagens pelo mundo"
           />
           <img
             class="gallery__image"
-            src="./images/__item (5).png"
+            src="./images/__item (5).jpg"
             alt="Paisagens pelo mundo"
           />
           <img
             class="gallery__image"
-            src="./images/__item (6).png"
+            src="./images/__item (6).jpg"
             alt="Paisagens pelo mundo"
           />
           <img
             class="gallery__image"
-            src="./images/__item (7).png"
+            src="./images/__item (7).jpg"
             alt="Paisagens pelo mundo"
           />
         </section>
@@ -105,7 +105,7 @@
 
             <img
               class="cities-main__cities-image"
-              src="./images/__image.png"
+              src="./images/__image.jpg"
               alt="kiev-city"
             />
             <div class="cities-main__description-container">
@@ -144,7 +144,7 @@
 
             <img
               class="cities-main__cities-image"
-              src="./images/__image (1).png"
+              src="./images/__image (1).jpg"
               alt="Criccieth-city"
             />
             <div class="cities-main__description-container">
@@ -181,7 +181,7 @@
 
             <img
               class="cities-main__cities-image"
-              src="./images/__image (2).png"
+              src="./images/__image (2).jpg"
               alt="berea-city"
             />
             <div class="cities-main__description-container">
@@ -219,7 +219,7 @@
 
             <img
               class="cities-main__cities-image"
-              src="./images/__image (3).png"
+              src="./images/__image (3).jpg"
               alt="city-Muramvya"
             />
             <div class="cities-main__description-container">
@@ -264,7 +264,7 @@
 
             <img
               class="cities-main__cities-image"
-              src="./images/london.png"
+              src="./images/london.jpg"
               alt="Guilherme-in-Elizabeth-tower"
             />
             <div class="cities-main__description-container">
