--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <button class="footer__center_button">Comprar bilhetes</button>
           </div>
         </div>
-        <p class="footer__copyrigth">© 2024. Guilherme Rigoto</p>
+        <p class="footer__copyrigth">© 2024. Mikael Corrêa</p>
       </footer>
     </div>
   </body>
